# Project_AudioPlayer_Saturn

./: CMakeLists.txt
src/: audio_display_widget.cpp  audio_display_widget.h  audio_player_controller.cpp  audio_player_controller.h  main.cpp  main.qrc  styles.qss  styles.qss.bak
